automation/full_platform/imagenet_canary/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagenet-stable
  namespace: auto-mlops-canary
spec:
  selector:
    app: imagenet-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: imagenet-canary
  namespace: auto-mlops-canary
spec:
  selector:
    app: imagenet-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
